# UVT-DISERTATIE-7E9

./: .gitignore  1st_breakfast.py  2nd_breakfast.py  Checker_C_4TrainingData.rar  Implementation_1.py  Implementation_2.py  Implementation_3.py  LICENSE  Makefile  README.md  apply_dmd.py  auteeeeeeeeeeeeoencoder.weights.h5  autoencoder.weights.h5  check-dmd.py  classification.py  compare_architectures.py  data_loader.py  decoder.py  defines.py  encoder.py  eval_matrix_dmd_ae.py  experiment_common.py  extra_optional.py  image_comparison.py  krampfn.py  latent_dynamics.py  listlib.py  losses.py  main-test-1.py  main-test-2.py  main.py  main_old.py  mandelbrot_reconstruct.py  nepezeu.py  other_architectures.py  prepare_training_data.py  pyproject.toml  quadratic-network.py  quadratic_predictor.py  requirements.txt  (+11 more)
.github/workflows/: ci.yml
scripts/: check-matrix-spectra.py  dmd-example.py  mat2npz.py  quadratic-network.py
