[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling>=1.10",
]

[project]
name = "UVT-ARAMBASA-7E9"
version = "2025.1"
description = "Code for my Masters Degree dissertation"
readme = "README.md"
keywords = [
    "dmd",
    "autoencoder",
    "mandelbrot",
    "dynamical-systems",
]
license = "MIT"
maintainers = [{ name = "Vlad Arambașa", email = "vlad.arambasa@e-uvt.ro" }]
authors = [{ name = "Vlad Arambașa", email = "vlad.arambasa@e-uvt.ro" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
dependencies = [
    "numpy>=2.1",
    "scipy>=1.14",
    "torch",
    "matplotlib",
]

[project.urls]
Repository = "https://github.com/UVT-ARAMBASA/UVT-DISERTATIE-7E9"

[project.optional-dependencies]
test = [
    "pytest"
]

